@@ -96,6 +96,7 @@ class Page
   div(:div_index, :index => 0)
   div(:div_xpath, :xpath => '//div')
   div(:div_text, :text => "page-object rocks!")
+  div(:div_title, :title => "div_title")
   div(:div_class_index, :class => "div_class", :index => 0)
   div(:div_name_index, :name => "div_name", :index => 0)
 
